--- a/BookMvcWeb/Views/Category/EditCategory.cshtml
+++ b/BookMvcWeb/Views/Category/EditCategory.cshtml
@@ -1,28 +1,25 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@model Category
-@{
-}
-<h2> Add Category</h2>
+﻿@model Category
+
+<h2> Edit Category</h2>
 <form method="post" class="container border px-5 py-3">
     <div class="row">
-        <div class="col-sm-7" >
+        <div class="col-sm-7">
             <div asp-validation-summary="ModelOnly"></div>
         </div>
     </div>
+    @*<input type="hidden" asp-for="Id" />*@
     <div class="row">
-        <label asp-for="Name" class="col-sm-2 col-form-label" ></label>
+        <label asp-for="Name" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-6">
             <input asp-for="Name" class="form-control" placeholder="Cartoon, Novel, SciFi.." />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
     </div>
     <div class="row mt-3">
-        <label asp-for="DisplayOrder" class="col-sm-2 col-form-label" ></label>
+        <label asp-for="DisplayOrder" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-6">
             <input asp-for="DisplayOrder" max="999" class="form-control" placeholder="0-999" />
-            <span asp-validation-for="DisplayOrder" class="text-danger" ></span>
+            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
         </div>
     </div>
     <div class="row">
