--- a/BookMvcWeb/Views/Shared/_Notification.cshtml
+++ b/BookMvcWeb/Views/Shared/_Notification.cshtml
@@ -1,10 +1,18 @@
 ﻿
 @if (TempData["success"] != null)
 {
-    @TempData["success"]
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" asp-append-version="true" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script>
+        toastr.success("@TempData["success"]");
+    </script>
 }    
 
 @if (TempData["error"] != null)
 {
-    @TempData["error"]
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" asp-append-version="true" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script>
+        toastr.error("@TempData["error"]");
+    </script>
 }
