--- a/BookMvcWeb/Views/Shared/_Notification.cshtml
+++ b/BookMvcWeb/Views/Shared/_Notification.cshtml
@@ -1,18 +1,17 @@
 ﻿
 @if (TempData["success"] != null)
 {
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" asp-append-version="true" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <script>
-        toastr.success("@TempData["success"]");
+        toastr.options.timeOut = 0;
+        toastr.options.extendedTimeOut = 0;
+        toastr.options.closeButton = true;
+        toastr.success('@TempData["success"]');
     </script>
 }    
 
 @if (TempData["error"] != null)
 {
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" asp-append-version="true" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <script>
-        toastr.error("@TempData["error"]");
+        toastr.error('@TempData["error"]');
     </script>
 }
