--- a/BookMvcWeb/Views/Category/AddCategory.cshtml
+++ b/BookMvcWeb/Views/Category/AddCategory.cshtml
@@ -11,22 +11,21 @@
             <div asp-validation-summary="ModelOnly"></div>
         </div>
     </div>
-    <div class="row">
-        <label asp-for="Name" class="col-sm-2 col-form-label" ></label>
-        <div class="col-sm-6">
-            <input asp-for="Name" class="form-control" placeholder="Cartoon, Novel, SciFi.." />
+    <div class="mt-1">
+        <div class="form-floating">
+            <input asp-for="Name" class="form-control" />
+            <label class="text-dark" asp-for="Name"></label>
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
     </div>
-    <div class="row mt-3">
-        <label asp-for="DisplayOrder" class="col-sm-2 col-form-label" ></label>
-        <div class="col-sm-6">
-            <input asp-for="DisplayOrder" max="999" class="form-control" placeholder="0-999" />
-            <span asp-validation-for="DisplayOrder" class="text-danger" ></span>
+    <div class="mt-3">
+        <div class="form-floating">
+            <input asp-for="DisplayOrder" class="form-control"/>
+            <label class="text-dark" asp-for="DisplayOrder"></label>
+            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-2"> </div>
         <div class="col-sm-3 mt-3">
             <button type="submit" class="btn btn-primary me-2"> <i class="fa-regular fa-floppy-disk"></i> &nbsp; Save </button>
             <a class="btn btn-secondary" asp-action="Index" asp-controller="Category"> <i class="fa-solid fa-xmark"></i> &nbsp; Cancel </a>
