--- a/BookMvcWeb/Views/_ViewImports.cshtml
+++ b/BookMvcWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using BookMvcWeb
-@using BookMvcWeb.Models
+﻿@using BookMvc
+@using BookMvc.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
