--- a/BookMvcWeb/Views/Shared/_Layout.cshtml
+++ b/BookMvcWeb/Views/Shared/_Layout.cshtml
@@ -21,13 +21,17 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
+                            <a class="nav-link text-light" asp-area="Customer" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Content Management</a>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <a class="nav-link text-light" asp-area="Administrator" asp-controller="Category" asp-action="Index">Category</a>
+                                <a class="nav-link text-light" asp-area="Administrator" asp-controller="Product" asp-action="Index">Product</a>
+                            </ul>
                         </li>
                     </ul>
                 </div>
@@ -48,6 +52,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <partial name="_Notification" />
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
